feat: Add contrast ratio and finalize color gen
Added the final method of color generation
	Utilizes a blend of the lecagy (for lightness)
	and the luminance based algorithm (for saturattion
	and hue) and utilizes a blend with lab color.
	Final shades are generated by blending a white
	or black to the final color.
Added contrast ratios
	W3 and W2 standards added
	APCA contrast utilizes absolute values

--- a/src/assets/SCSS/styles.scss
+++ b/src/assets/SCSS/styles.scss
@@ -1,5 +1,7 @@
 /* SCSS Main File */
 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
+
 /* Vendors */
 @import "vendors/normalize";
 
@@ -8,3 +10,8 @@
 
 /* Shame */
 @import "shame";
+
+body {
+  background-color: #131313;
+  color: white !important;
+}
