build: Add transparent buttons

--- a/src/assets/SCSS/styles.scss
+++ b/src/assets/SCSS/styles.scss
@@ -12,7 +12,7 @@
 @import "shame";
 
 body {
-  background-color: #131313;
-  color: white !important;
+  //background-color: #131313;
+  //color: white !important;
   height: 100vh;
 }
