feat: Add pages for v.1.0.0
Add error and coming soon pages, Bootstrap Icons

--- a/src/assets/SCSS/styles.scss
+++ b/src/assets/SCSS/styles.scss
@@ -5,6 +5,7 @@
 /* Vendors */
 // Skipped import, using Tailwind
 // @import "vendors/normalize";
+@import "bootstrap-icons/font/bootstrap-icons.css";
 
 /* Base */
 @import "base/base";
