feat(playground): Add playground layouts

--- a/src/assets/SCSS/styles.scss
+++ b/src/assets/SCSS/styles.scss
@@ -6,6 +6,7 @@
 // Skipped import, using Tailwind
 // @import "vendors/normalize";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import "vendors/scroll";
 
 /* Base */
 @import "base/base";
