--- a/src/assets/SCSS/base/_base.scss
+++ b/src/assets/SCSS/base/_base.scss
@@ -15,8 +15,8 @@ html {
 @font-face {
   font-family: 'Hubot Sans';
   src:
-          url('fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
-          url('fonts/Hubot-Sans.woff2') format('woff2-variations');
+          url('../../fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
+          url('../../fonts/Hubot-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
