--- a/src/assets/components/colorIdentifier.scss
+++ b/src/assets/components/colorIdentifier.scss
@@ -15,6 +15,6 @@
       right: -1.5px;
       border-radius: 6px;
       border: 2.5px solid #fff;
-      box-shadow: 0px 0px 2px 0px #00000032, inset 0px 0px 2px 0px #00000032;
+      box-shadow: 0 0 2px 0 #00000032, inset 0 0 2px 0 #00000032;
     }
 }
